# qai-appbuilder

./: .gitattributes  .gitignore  .gitmodules  BUILD.md  README.md  setup.py
samples/genie/c++/Service/: .gitattributes  .gitignore  CMakeLists.txt  build_android.bat  build_linux.sh  build_win.bat
samples/genie/c++/Service/scripts/: Android.mk  Application.mk  version.cmake
samples/genie/c++/Service/test/: CLI-GUIDE.zh-CN.md  generate_builder_report.py  run_test_builder_cli_remote.bat  test_builder_cli.md  test_builder_cli.py  test_service.md  test_service.py
tools/qaimodelbuilder/: .gitignore  Build.bat  Console.bat  QUICK-START.md  QUICK-START.zh-CN.md  README.md  README.zh-CN.md  Setup.bat  Start.bat  Uninstall.bat  build_info.json  pyproject.toml  qai.bat
tools/qaimodelbuilder/apps/api/: __init__.py  __main__.py  _ai_coding_channel_bridge.py  _ai_coding_di.py  _ai_coding_notify_bridge.py  _app_builder_di.py  _app_builder_model_builder_bridge.py  _ask_conversation_registry.py  _audit_bypass_sink.py  _background_process_di.py  _channel_dispatch_bridge.py  _channel_grant_bridge.py  _channel_webui_broadcast.py  _channels_di.py  _chat_appbuilder_tool_bridge.py  _chat_background_process_tool_bridge.py  _chat_di.py  _chat_feature_skill_provider.py  _chat_message_bridge.py  _chat_skill_catalog_provider.py  _chat_skill_tool.py  _chat_sync_push.py  _chat_title_push.py  _chat_tool_bridge.py  _chat_tool_result_render.py  _chat_web_search_tool_bridge.py  _code_persona_bridge.py  _command_policy_di.py  _conversation_command_adapter.py  _dependency_approval_di.py  _dependency_approval_notify_bridge.py  _file_broker_bridge.py  _file_guard_bridge.py  _global_proxy.py  _gomaster_external_optimize_bridge.py  _gomaster_service_bridge.py  _gomaster_session_bridge.py  _guard_token.py  _jsonl_audit_sink.py  _local_service_endpoint_bridge.py  (+30 more)
tools/qaimodelbuilder/apps/cli/: __main__.py  _chat_build_tool_bridge.py  _chat_tool_bridge.py  _console_ctrl.py  _endpoint_helper.py  _pager.py  _render.py  _render_theme.py  _repl.py  _runtime.py  _session_log.py  serve.py
tools/qaimodelbuilder/apps/cli/_tui/: __init__.py  app.py  logging_bridge.py  screens.py  widgets.py
tools/qaimodelbuilder/apps/cli/commands/: __init__.py  app.py  build.py  channel.py  chat.py  code.py  config.py  conv.py  dep.py  install.py  pack.py  policy.py  run.py  service.py  service_release.py  skill.py
tools/qaimodelbuilder/desktop/: README.md
tools/qaimodelbuilder/factory/: README.md
tools/qaimodelbuilder/factory/app_builder/: SKILL.md  fullstack-authoring.SKILL.md
tools/qaimodelbuilder/factory/app_builder/_template/: runner.py
tools/qaimodelbuilder/factory/app_builder/shared/: runner_protocol.py  weight_downloader.py
tools/qaimodelbuilder/factory/chat_features/app-builder/: SKILL.md  app-authoring.md  skill.policy.json
tools/qaimodelbuilder/factory/chat_features/code-assist/: SKILL.md
tools/qaimodelbuilder/factory/chat_features/model-builder/: SKILL.md
tools/qaimodelbuilder/factory/chat_features/model-hub/: SKILL.md
tools/qaimodelbuilder/factory/chat_features/ppt-gen/: SKILL.md
tools/qaimodelbuilder/factory/config/: file_guard_paths.json
tools/qaimodelbuilder/factory/db_staging/: chat_agent_template.jsonl  chat_mode_template.jsonl  chat_roster_template.jsonl
tools/qaimodelbuilder/frontend/: .pnpmfile.cjs  env.d.ts  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
tools/qaimodelbuilder/frontend/e2e/: app-builder-consistency.md  app-builder-consistency.spec.ts  downloads-consistency.spec.ts  security-consistency.spec.ts  service-consistency.spec.ts  settings-consistency.spec.ts  skills-consistency.spec.ts
tools/qaimodelbuilder/frontend/src/: App.vue  edition.ts  main.ts
tools/qaimodelbuilder/frontend/src/api/: aiCodingCredentials.ts  aiCodingHealth.ts  appBuilderImport.ts  auth.ts  backgroundProcess.ts  base.ts  chatTools.ts  cloudModels.ts  codingConfig.ts  conversationBudget.ts  csrf.ts  downloads.ts  errors.ts  globalEvents.ts  http.ts  index.ts  mcpServers.ts  ocService.ts  serviceControl.ts  sse.ts  stream.ts  wsStream.ts
tools/qaimodelbuilder/frontend/src/composables/: keymap.ts  markdown-mermaid.ts  markdown.ts  useAppCommands.ts  useAuditFilter.ts  useAutoApprove.ts  useCcAgents.ts  useCcAuth.ts  useCcModels.ts  useChannelSettings.ts  useClaudeCode.ts  useClickOutside.ts  useCloudModelStatus.ts  useCodePersonas.ts  useCodingSession.ts  useCodingSession.types.ts  useCommandPalette.ts  useConfig.ts  useConfirm.ts  useConversationGrouping.ts  useConversationPin.ts  useConversationRename.ts  useConversationSearch.ts  useConversationWorkspace.ts  useDangerousCommands.ts  useDepBroker.ts  useDownloadCenter.ts  useFeishu.ts  useFocusTrap.ts  useFontSize.ts  useFontSizePopover.ts  useForgeConfig.ts  useHeaderActions.ts  useLanguageSwitch.ts  useLightbox.ts  useLocalize.ts  useMbProAccessGate.ts  useMermaidRender.ts  useModeFrameTriggers.ts  useModeIntroCardVisibility.ts  (+19 more)
tools/qaimodelbuilder/frontend/src/edition-stubs/: EmptyComponent.vue  empty.ts
tools/qaimodelbuilder/frontend/src/help-content/: cloud-model-api-key.en.md  cloud-model-api-key.zh-CN.md  cloud-model-api-key.zh-TW.md  cloud-models.en.md  cloud-models.zh-CN.md  cloud-models.zh-TW.md  download-settings.en.md  download-settings.zh-CN.md  (+10 more)
tools/qaimodelbuilder/interfaces/http/: error_handlers.py
tools/qaimodelbuilder/scripts/init/: __init__.py  init_data_dir.py  install.py  install_qairt.py  secret_bootstrap.py  seed_defaults.py  uninstall.py
tools/qaimodelbuilder/scripts/release/: README.md  __init__.py
tools/qaimodelbuilder/scripts/setup/: __init__.py  _pack_deps.py  download_with_aria2c.ps1  install_app_builder_deps.py  install_app_builder_weights.py  install_vs.ps1  predeploy_tts_runtime.py  setup_qairt_env.py
tools/qaimodelbuilder/skills/email-163-com/: SKILL.md  main.py
tools/qaimodelbuilder/skills/read-arxiv-paper/: SKILL.md
tools/qaimodelbuilder/skills/weather/: SKILL.md
tools/qaimodelbuilder/tools/init/: __init__.py
(+1729 files in other folders)
